# zitadel-rust

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml  testing.yml
crates/zitadel/: Cargo.toml
crates/zitadel-gen/: Cargo.toml
crates/zitadel-gen/src/api/: mod.rs
crates/zitadel-gen/src/api/zitadel/action/v1/: zitadel.action.v1.rs
crates/zitadel-gen/src/api/zitadel/action/v2/: zitadel.action.v2.rs  zitadel.action.v2.tonic.rs
crates/zitadel-gen/src/api/zitadel/action/v2beta/: zitadel.action.v2beta.rs  zitadel.action.v2beta.tonic.rs
crates/zitadel-gen/src/api/zitadel/admin/v1/: zitadel.admin.v1.rs  zitadel.admin.v1.tonic.rs
crates/zitadel-gen/src/api/zitadel/analytics/v2beta/: zitadel.analytics.v2beta.rs  zitadel.analytics.v2beta.tonic.rs
crates/zitadel-gen/src/api/zitadel/app/v1/: zitadel.app.v1.rs
crates/zitadel-gen/src/api/zitadel/app/v2beta/: zitadel.app.v2beta.rs  zitadel.app.v2beta.tonic.rs
crates/zitadel-gen/src/api/zitadel/application/v2/: zitadel.application.v2.rs  zitadel.application.v2.tonic.rs
crates/zitadel-gen/src/api/zitadel/auth/v1/: zitadel.auth.v1.rs  zitadel.auth.v1.tonic.rs
crates/zitadel-gen/src/api/zitadel/authn/v1/: zitadel.authn.v1.rs
crates/zitadel-gen/src/api/zitadel/v1/: zitadel.v1.rs
crates/zitadel/src/: lib.rs
crates/zitadel/src/api/: clients.rs  mod.rs
crates/zitadel/src/axum/introspection/: state_builder.rs  user.rs
crates/zitadel/src/credentials/: application.rs  service_account.rs
crates/zitadel/src/oidc/: discovery.rs
crates/zitadel/src/oidc/introspection/: mod.rs
(+83 files in other folders)
