[workspace]
resolver = "2"
members = [
    "crates/zitadel",
    "crates/zitadel-gen",
]

[workspace.package]
version = "0.1.0"
authors = ["Christoph Bühler <christoph@smartive.ch>"]
description = "Rust Microservices for labs gallery"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
prost = { version = "0.14.3", default-features = false }
prost-types = { version = "0.14.3", default-features = false }
tonic = { version = "0.14.5", features = ["tls-ring"] }
tonic-prost = "0.14.5"